--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+html{
+  min-height: 100%;
+}
 body {
   margin: 0;
   padding: 0;
@@ -6,8 +9,25 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: url(/img/bg.jpg) no-repeat;
+  background-size: 100%;
+  background-position: bottom;
+  background-color: aqua;
 }
-
+form{
+  padding: 20px;
+  margin-top: 60px;
+}
+form button, form h5{
+  margin: 20px 0;
+}
+input[type=text]:not(.browser-default):focus:not([readonly]),
+input[type=email]:not(.browser-default):focus:not([readonly]),
+input[type=password]:not(.browser-default):focus:not([readonly]),
+textarea.materialize-textarea:focus:not([readonly]){
+  border-color: pink;
+  box-shadow: none;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
